--- a/CSharpOPDRACHTEN/CSharpOPDRACHTEN/CSharpOPDRACHTEN.csproj
+++ b/CSharpOPDRACHTEN/CSharpOPDRACHTEN/CSharpOPDRACHTEN.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Opdracht1.cs" />
     <Compile Include="Opdracht2.cs" />
+    <Compile Include="Opdracht3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
