Game Karakter met Constructor

--- a/CSharpOPDRACHTEN/CSharpOPDRACHTEN/CSharpOPDRACHTEN.csproj
+++ b/CSharpOPDRACHTEN/CSharpOPDRACHTEN/CSharpOPDRACHTEN.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Opdracht5.cs" />
     <Compile Include="Opdracht6.cs" />
     <Compile Include="Opdracht7.cs" />
+    <Compile Include="Opdracht8.cs" />
     <Compile Include="Opdracht9.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
